# multi-agent-llm-trading-platform

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CLAUDE_CODE_HANDOFF.md  CLAUDE_CODE_M10_HANDOFF.md  CLAUDE_CODE_M9_HANDOFF.md  CLAUDE_CODE_PLAN_2C_HANDOFF.md  DEFINITION_OF_DONE.md  DONE_GROK_HANDOFF_BACKTEST_HARNESS.md  GROK.md  GROK_HANDOFF_CROSS_LEARNING.md  LEDGER.md  README.md  STATUS.md  app.py  pyproject.toml
agents/: base.py  calibration.py  calibration_recorder.py  haiku_agent.py  haiku_synthesizer.py  json_utils.py  llm.py  manager_agent.py  manager_bridge.py  memory.py  news_scorer.py  opus_agent.py  outcome_recorder.py  sonnet_agent.py
backtest/: __init__.py  engine.py  run_baseline.py  strategies.py
blueprint/: 00_BLUEPRINT.md  01_HONEST_ASSESSMENT.md  CHANGELOG.md  alpaca_paper_final_snapshot.md
config/: macro_events.yaml  runtime_store.py  settings.py  universes.py
core/: clock.py  events.py  state_machine.py  types.py
dashboard/: app.py  data.py  layout.py  server.py  spy.py
data/: bar_cache.py  cache.py  doc_pack.py  market.py  news.py  news_fetcher.py  news_store.py  store.py  summarize.py
execution/: agent_state_tracker.py  alpaca_broker.py  approval_queue.py  broker.py  budget.py  fake_broker.py  kill_switch.py  lots.py  oms.py  oms_store.py  planner.py  reconciler.py  risk.py  robinhood_broker.py  robinhood_token.py  sizing.py  tax.py
logs/: build_journal.md  m10_backlog.md  m1_m8_audit.md  m9_complete.md  plan_2c_complete.md  plan_2c_followups.md  post_paper_trade_punch_list.md  v1_complete.md
ops/: agent_pnl_store.py  alerts.py  attribution.py  daily_recap.py  diag_agent_inputs.py  equity_snapshotter.py  heartbeat.py  journal.py  manager_analytics.py  migrate_lot_symbols.py  telegram.py
research/: 01_theaiportfolios.md  02_institutional_strategies.md  03_autotrader_frameworks.md  04_alpaca_and_budget.md  05_sdk_capabilities.md  06_vectorbt_benchmark.md  06_vectorbt_benchmark.py  07_leverage_strategies.md
scripts/: clean_dust_lots.py  fix_solusd_break.py  flatten_alpaca_paper.py  migrate_news_schema_v2.py  reconcile_oms_after_flatten.py  robinhood_mcp_connect.py  robinhood_oauth.py  robinhood_probe.py
tests/: conftest.py  test_account_guard.py  test_adversarial_critique_wiring.py  test_agent_state_tracker.py  test_agents_m7.py  test_agents_offline.py  test_alpaca_broker.py  test_app_lifecycle.py  (+45 more)
(+6 files in other folders)
