[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-agent-asset-bot"
version = "0.1.0"
description = "Four-agent (Haiku/Sonnet/Opus/Manager) paper-trading bot on Alpaca"
requires-python = ">=3.12"
dependencies = [
    # Broker
    "alpaca-py>=0.43.2",
    # LLM
    "anthropic>=0.49.0",
    # Settings / validation
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # Storage
    "duckdb>=0.10.0",
    # Caching
    "diskcache>=5.6.0",
    # Scheduling
    "apscheduler>=3.10.0",
    # Data
    "yfinance>=0.2.0",
    "requests>=2.31.0",
    "feedparser>=6.0.0",
    # Dashboard
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "dash>=2.16.0",
    "plotly>=5.20.0",
    # Alerting
    "httpx>=0.27.0",
    # Backtest
    "vectorbt>=0.26.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.9.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "agents", "execution", "data", "backtest", "dashboard", "ops", "config"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "C4", "RET", "SIM", "TCH", "PTH"]
ignore = [
    "ANN401",  # dynamically typed expressions (Any) — allowed in adapters
    "TC001",   # app imports needed at runtime (Protocol annotations, dataclass fields)
    "TC002",   # third-party imports needed at runtime (alpaca-py model attributes)
    "TC003",   # stdlib imports needed at runtime (dataclass fields, __post_init__)
    "UP046",   # Generic[T] is fine; PEP-695 syntax optional at Python 3.12
    "N818",    # Broker* exceptions are domain concepts, not generic Errors
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
# Strict only on core modules; adapters use ignore comments where needed
[[tool.mypy.overrides]]
module = ["vectorbt.*", "diskcache.*", "feedparser.*", "yfinance.*", "alpaca.*", "dash.*", "plotly.*", "apscheduler.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
